fix(items-list): attempt at improve item alignment

--- a/src/app/checklists/items-list/item/item.component.scss
+++ b/src/app/checklists/items-list/item/item.component.scss
@@ -1,6 +1,6 @@
 .item-container {
   display: flex;
-  align-items: baseline;
+  align-items: center;
 }
 
 .item-container:focus {
@@ -45,10 +45,12 @@
 
 .prompt-challenge:before {
   content: ' □';
+  vertical-align: 1px;
 }
 
 .prompt-challenge-response:before {
   content: ' □ ';
+  vertical-align: 1px;
 }
 
 .prompt-caution:before {
@@ -78,7 +80,7 @@
 
 .expectation-spacer {
   flex-grow: 1;
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='20' height='100' viewBox='0 0 20 100' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ctext x='10' y='15' fill='white' font-size='2em'%3e.%3c/text%3e%3c/svg%3e ");
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='20' height='100' viewBox='0 0 20 100' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ctext x='10' y='16' fill='white' font-size='2em'%3e.%3c/text%3e%3c/svg%3e ");
   background-repeat: repeat-x;
 }
 
